# KikuNote

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py  pipeline.py
backend/app/audio/: transcribe.py
backend/app/llm/: analyze.py
backend/app/vocab/: extract.py  jlpt_vocab.json  jlpt_vocab_final.json
backend/scripts/: build_jlpt.py  test_chirp.py  test_llm.py  test_pipeline.py  test_vocab.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: Results.tsx
frontend/src/hooks/: useRecorder.ts
