[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "fugashi>=1.5.2",
    "google-cloud-speech>=2.27.0",
    "google-genai>=2.9.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.32",
    "unidic-lite>=1.0.8",
    "uvicorn[standard]>=0.49.0",
]
